welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	       avance()
               ^PatternPicture:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	       baisseBrosse()
               ^PatternPicture:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	       gauche()
               ^PatternPicture:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	       avance()
               ^PatternPicture:7: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	       leveBrosse()
               ^